Changes in Release 1.4.6
=============================================
[JXT-118] - ParserPool impls are not correctly resetting builder ErrorHandler and EntityResolver on second and subsequent checkout 
[JXT-119] - Various ParserPool interface methods should never return null 
[JXT-120] - Symmetric key generation for Triple DES keys fails with invalid key size

Changes in Release 1.4.5
=============================================
[JXT-116] - Default config for X509Credential KeyInfo generation should emit cert chain in addition to entity cert 
[JXT-117] - Adjust PKIX TrustEngine name handling

Changes in Release 1.4.4
=============================================
Update Apache Santuario (xmlsec) to 1.5.7
Remove endorsement of Xerces and Xalan (for further info see SIDP-619).

Changes in Release 1.4.3
=============================================
[JXT-114] - X509Util getCommonNames returns a list in the reverse order of what is expected 
[JXT-115] - Add HostnameVerifier impl which processes cert subject DN by parsing the ASN.1 encoding

Changes in Release 1.4.2
=============================================
[JXT-108] - Encrypter setKeyResolverCriteria() typo, should be getKeyResolverCriteria()
[JXT-109] - SimpleKeyInfoReferenceEncryptedKeyResolver constructor missing 'public' modifier 
[JXT-110] - SecurityHelper derivePublicKey incorrectly derives public key for DSAPrivateKey 
[JXT-111] - IndexingObjectStore uses hashCode() in an unsafe manner
[JXT-112] - Update Bouncy Castle to latest version 

Changes in Release 1.4.1
=============================================
[JXT-102] - Decrypter should be defensive about Santuario and Java crypto classes throwing unchecked exceptions 
[JXT-103] - XMLTooling failed to pass veracode due Use of Wrong Operator in String Comparison (CWE ID 597) 
[JXT-104] - ClasspathResolver doesn't set systemId on resolved InputSources failing subsequent resolutions