@@ -3,6 +3,7 @@ Changes in Release 1.4.6
 [JXT-118] - ParserPool impls are not correctly resetting builder ErrorHandler and EntityResolver on second and subsequent checkout 
 [JXT-119] - Various ParserPool interface methods should never return null 
 [JXT-120] - Symmetric key generation for Triple DES keys fails with invalid key size
+[JXT-123] - AbstractXMLObject prepareForAssignment(String, String) should have variant that doesn't normalize input
 
 Changes in Release 1.4.5
 =============================================
